Final correct tests based on actual code